# data-science-cookiecutter

./: README.md  cookiecutter.json  environment.yml
.github/: pull_request_template.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/workflows/: semantic-pr.yml
{{cookiecutter.project_slug}}/config/: main.yml
{{cookiecutter.project_slug}}/config/model/: model_m.yml  model_n.yml
{{cookiecutter.project_slug}}/config/process/: proces_b.yml  process_a.yml
{{cookiecutter.project_slug}}/data/: raw.dvc
{{cookiecutter.project_slug}}/src/: __init__.py  app.py  process_data.py  train_model.py
