[tool.poetry]
name = "{{ cookiecutter.project_title }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
pyarrow = "^12.0.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
fastapi = {extras = ["standard"], version = "^0.115.5"}

[tool.poetry.group.dev.dependencies]
setuptools = "^75.1.0"
black = "^24.4.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
pdoc3 = "^0.11.1"
# Notebooks tools
ipykernel = "^6.23.2"
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
plotnine = "^0.12.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
plotnine3d = "^0.0.6"
plotly = "^5.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "N", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
fail-under = 80
